<resources>
    <string name="application_terminal">Terminal Emulator</string>
    <string name="application_term_app">Terminal Emulator</string>
    <string name="preferences">Preferences</string>
    <string name="new_window">New window</string>
    <string name="close_window">Close window</string>
    <string name="window_list">Windows</string>
    <string name="prev_window">Prev window</string>
    <string name="next_window">Next window</string>
    <string name="screen">Screen</string>
    <string name="reset">Reset term</string>
    <string name="send_email">Email to</string>
    <string name="special_keys">Special keys</string>
    <string name="toggle_soft_keyboard">Toggle soft keyboard</string>
    <string name="toggle_function_bar">Functionbar</string>
    <string name="quit">Quit</string>
    <string name="faild_to_bind_to_termservice">Faild to bind to TermService</string>
    <string name="please_restart">Please restart this application.</string>
    <string name="switch_windows_warning">Swipe the upper half of the screen to switch windows.</string>
    <string name="reset_toast_notification">This window\'s terminal state has been reset.</string>
    <string name="toast_clipboard">Text copied to the clipboard.</string>
    <string name="toast_clipboard_error">Text is not included.</string>
    <string name="clipboard_warning_title">About the clipboard</string>
    <string name="paste_vim">\"*p - Paste to Vim</string>
    <string name="paste_shell">Paste to shell</string>
    <string name="copy_to_clipboard">Copy to the clipboard</string>
    <string name="clipboard_warning">Please use Vim command or \"Share\" intent for copy/paste.\n\nVim command:\n\"*p - From the clipboard to Vim.\n\"*y - From Vim to the clipboard.\ngY - From the unnamed register to the clipboard. (Only on DroidVim. e.g. yygY)</string>
    <string name="edit_vimrc_message_show_dotfiles">- File manager\n DroidVim\'s preferences > Drawer &amp; External apps > Show dotfiles</string>
    <string name="edit_vimrc_message">If you have Vimfiles (.vimrc and .vim), there are several ways to copy them to Home directory ($HOME).\nSee \"Help\" > \"Vimfiles\".\n\n</string>
    <string name="edit_vimrc_message_symboliclink">- Symbolic link (Android 10 and earlier)</string>
    <string name="edit_vimrc_message_file_manager">- \"Drawer menu > File Manager\" (Android 7 and later)\n</string>
    <string name="edit_vimrc_message_change_home">- Change the Home directory to a directory in the internal storage or \"$APPEXTHOME\".\n</string>
    <string name="edit_vimrc_message_backup_restore">- Backup/Restore\n Use \"Long press menu > Storage > Backup/Restore\"\n</string>
    <string name="title_prefs_keepscreen_at_startup">\"Keep screen\" at startup</string>
    <string name="summary_keepscreen_preference">Change the time to sleep while using this application.</string>
    <string name="title_prefs_keepscreen">\"Keep screen\" time</string>
    <string name="dialog_prefs_keepscreen">Time to sleep (0–120min)</string>
    <string name="keepscreen">Keep screen</string>
    <string name="prefs_preferences">App Settings</string>
    <string name="screen_preferences">Screen</string>
    <string name="title_notification_preference">App info</string>
    <string name="summary_notification_preference">Notifications can be hidden via App info. However, messages with low importance will not be shown.</string>
    <string name="title_statusbar_icon_preference">Status bar icon</string>
    <string name="summary_statusbar_icon_on_preference">Show/Hide status bar icon.</string>
    <string name="summary_statusbar_icon_off_preference">Show/Hide status bar icon.</string>
    <string name="title_orientation_preference">Screen orientation</string>
    <string name="dialog_title_orientation_preference">Screen orientation</string>
    <string name="title_theme_preference">Theme</string>
    <string name="summary_theme_preference">Choose application theme.</string>
    <string name="dialog_title_theme_preference">Theme</string>
    <string name="title_cursorstyle_preference">Cursor style</string>
    <string name="summary_cursorstyle_preference">Choose cursor style and rendering mode.</string>
    <string name="dialog_title_cursorstyle_preference">Cursor style and rendering mode</string>
    <string name="font_preferences">Font</string>
    <string name="title_hw_acceleration_by_default_preference">Hardware acceleration</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_fontleading_preference">Font leading</string>
    <string name="dialog_title_fontleading_preference">Font leading</string>
    <string name="title_fontfile_preference">Font file</string>
    <string name="title_ambiwidth_preference">East Asian ambiguous width</string>
    <string name="summary_ambiwidth_preference">Treat Ambiguous Characters as full width character for East Asian fonts.</string>
    <string name="dialog_title_ambiwidth_preference">East Asian ambiguous character width</string>
    <string name="title_force_flush_drawtext_preference">Use proportional font</string>
    <string name="summary_force_flush_drawtext_preference">Fix screen glitches on proportional font or non-single-byte character set. Drawing speed will be slower.</string>
    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose terminal color scheme.</string>
    <string name="dialog_title_color_preference">Terminal color scheme</string>
    <string name="title_cursorcolor_preference">Cursor color</string>
    <string name="dialog_title_cursorcolor_preference">Set cursor color</string>
    <string name="dialog_message_cursorcolor_preference">Blank: Terminal text color\nRRGGBB: 6-digit hex number. (e.g. 7f7f7f)</string>
    <string name="title_composingtext_preference">Input method color</string>
    <string name="summary_composingtext_preference">Choose input method composing text color.</string>
    <string name="dialog_title_composingtext_preference">Input method composing text color</string>
    <string name="title_double_tap_preference">Double tap</string>
    <string name="dialog_title_double_tap_preference">Double tap</string>
    <string name="title_right_double_tap_preference">Double tap near the right edge</string>
    <string name="dialog_title_right_double_tap_preference">Double tap near the right edge</string>
    <string name="title_left_double_tap_preference">Double tap near the left edge</string>
    <string name="dialog_title_left_double_tap_preference">Double tap near the left edge</string>
    <string name="title_top_double_tap_preference">Double tap near the top edge</string>
    <string name="dialog_title_top_double_tap_preference">Double tap near the top edge</string>
    <string name="title_bottom_double_tap_preference">Double tap near the bottom edge</string>
    <string name="dialog_title_bottom_double_tap_preference">Double tap near the bottom edge</string>
    <string name="functionbar_preferences">Functionbar</string>
    <string name="gesture_preferences">Gestures &amp; Buttons</string>
    <string name="keyboard_preferences">Physical keyboard</string>
    <string name="title_backaction_preference">Back button</string>
    <string name="dialog_title_backaction_preference">Back button</string>
    <string name="shell_preferences">Shell</string>
    <string name="title_shell_preference">Command line</string>
    <string name="summary_shell_preference">Specify the shell command line.</string>
    <string name="dialog_title_shell_preference">Shell</string>
    <string name="title_initialcommand_preference">Initial command</string>
    <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
    <string name="dialog_title_initialcommand_preference">Initial Command</string>
    <string name="title_intentcommand_preference">Intent command</string>
    <string name="summary_intentcommand_preference">Command for intent.</string>
    <string name="dialog_title_intentcommand_preference">Intent Command</string>
    <string name="title_mrucommand_preference">MRU command</string>
    <string name="summary_mrucommand_preference">Set MRU Command to \"Open file…\" button.</string>
    <string name="title_termtype_preference">Terminal type</string>
    <string name="summary_termtype_preference">What terminal type to report to the shell.</string>
    <string name="dialog_title_termtype_preference">Terminal type</string>
    <string name="title_verify_path_preference">Verify PATH entries</string>
    <string name="summary_verify_path_preference">Whether inaccessible directories should be removed from the PATH.</string>
    <string name="alt_uses_8bit_meta">Alt key uses 8bit MSB</string>
    <string name="alt_sends_esc">Alt key sends ESC</string>
    <string name="back_as_esc">Back button as ESC</string>
    <string name="summary_back_as_esc_preference">Enable it if ESC key of physical keyboard is handled as Back button.</string>
    <string name="ignore_xoff">Ignore XOFF flow control</string>
    <string name="ignore_xoff_summary_on">Ignore Ctrl-s.</string>
    <string name="ignore_xoff_summary_off">Ctrl-s sends xoff.</string>
    <string name="title_mouse_tracking_preference">Send mouse events</string>
    <string name="summary_mouse_tracking_preference">Whether tap and scroll events should be sent as escape sequences to the terminal.</string>
    <string name="title_volume_as_cursor_tracking_preference">Volume button as cursor</string>
    <string name="title_pinch_in_out_preference">Pinch in/out</string>
    <string name="summary_pinch_in_out_preference">Change the font scale</string>
    <string name="ime_input_method_preferences">Text input mode</string>
    <string name="title_home_dir_chooser_preference">Home directory</string>
    <string name="summary_home_dir_chooser_preference"></string>
    <string name="title_startup_chooser_preference">Startup directory</string>
    <string name="summary_startup_chooser_preference">Choose startup directory</string>
    <string name="dialog_title_scoped_storage_home_path_mode_preference">Choose home directory path</string>
    <string name="title_cloud_storage_read_check">Cloud storage read check</string>
    <string name="summary_cloud_storage_read_check">Before writing the file, check the status of the writing destination.\n(Dropbox/GoogleDrive/OneDrive)</string>
    <string name="title_cloud_storage_write_check">Cloud storage write check</string>
    <string name="summary_cloud_storage_write_check">Check the write status a few seconds after writing the file.\n(Dropbox/GoogleDrive/OneDrive)</string>
    <string name="external_apps_preferences">Drawer &amp; External Apps</string>
    <string name="external_app">Application name</string>
    <string name="external_app_activity">Activity</string>
    <string name="title_scoped_storage_startup_path_mode_preference">Change Startup directory</string>
    <string name="summary_scoped_storage_startup_path_mode_preference">Use \"$APPEXTHOME\" as the startup directory.</string>
    <string name="title_show_dotfiles">Show dotfiles ($HOME)</string>
    <string name="summary_show_dotfiles">Allows you to access the dotfiles (.vimrc, .bashrc, etc.) in the home directory using the file manager.\nFor security reasons, we recommend disabling the option only when necessary.</string>
    <string name="external_app_button">External App</string>
    <string name="summary_external_app_button">Choose the app for the \"External App\" button.</string>
    <string name="title_cloud_dropbox_preference">Dropbox</string>
    <string name="title_cloud_googledrive_preference">GoogleDrive</string>
    <string name="title_html_viewer_mode_preference">Html viewer</string>
    <string name="summary_html_viewer_mode">Default</string>
</resources>