<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="android_shell_path"
        android:defaultValue="@string/pref_shell_default"
        android:title="@string/title_shell_preference"
        android:summary="@string/summary_shell_preference"
        android:dialogTitle="@string/dialog_title_shell_preference" />

    <EditTextPreference
        android:key="initialcommand_rev4"
        android:defaultValue="@string/pref_initialcommand_default"
        android:title="@string/title_initialcommand_preference"
        android:summary="@string/summary_initialcommand_preference"
        android:dialogTitle="@string/dialog_title_initialcommand_preference" />

    <EditTextPreference
        android:key="intent_command"
        android:defaultValue="@string/pref_intent_command_default"
        android:title="@string/title_intentcommand_preference"
        android:summary="@string/summary_intentcommand_preference"
        android:dialogTitle="@string/dialog_title_intentcommand_preference" />

    <ListPreference
        android:key="termtype"
        android:defaultValue="@string/pref_termtype_default"
        android:title="@string/title_termtype_preference"
        android:summary="@string/summary_termtype_preference"
        android:entries="@array/entries_termtype_preference"
        android:entryValues="@array/entries_termtype_preference"
        android:dialogTitle="@string/dialog_title_termtype_preference" />

    <CheckBoxPreference
        android:key="verify_path"
        android:defaultValue="@bool/pref_verify_path_default"
        android:title="@string/title_verify_path_preference"
        android:summary="@string/summary_verify_path_preference" />

    <Preference
        android:key="startup_dir_chooser"
        android:title="@string/title_startup_chooser_preference"
        android:summary="@string/summary_startup_chooser_preference" />

    <Preference
        android:key="home_dir_chooser"
        android:title="@string/title_home_dir_chooser_preference"
        android:summary="@string/summary_home_dir_chooser_preference" />

</PreferenceScreen>
