<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="android_shell_path"
        android:defaultValue="@string/pref_shell_default"
        android:title="@string/title_shell_preference"
        android:summary="@string/summary_shell_preference"
        android:dialogTitle="@string/dialog_title_shell_preference"/>

    <EditTextPreference
        android:key="initialcommand_rev5"
        android:defaultValue="@string/pref_initialcommand_default"
        android:title="@string/title_initialcommand_preference"
        android:summary="@string/summary_initialcommand_preference"
        android:dialogTitle="@string/dialog_title_initialcommand_preference"/>

    <EditTextPreference
        android:key="intent_command"
        android:defaultValue="@string/pref_intent_command_default"
        android:title="@string/title_intentcommand_preference"
        android:summary="@string/summary_intentcommand_preference"
        android:dialogTitle="@string/dialog_title_intentcommand_preference"/>

    <ListPreference
        android:key="termtype"
        android:defaultValue="@string/pref_termtype_default"
        android:title="@string/title_termtype_preference"
        android:summary="@string/summary_termtype_preference"
        android:entries="@array/entries_termtype_preference"
        android:entryValues="@array/entries_termtype_preference"
        android:dialogTitle="@string/dialog_title_termtype_preference"/>

    <SwitchPreference
        android:key="verify_path"
        android:defaultValue="@bool/pref_verify_path_default"
        android:title="@string/title_verify_path_preference"
        android:summary="@string/summary_verify_path_preference"/>

    <ListPreference
        android:key="scoped_storage_home_path_mode"
        android:defaultValue="@string/pref_scoped_storage_home_path_mode_default"
        android:title="@string/title_home_dir_chooser_preference"
        android:summary="@string/summary_home_dir_chooser_preference"
        android:entries="@array/entries_scoped_storage_home_path_mode_preference"
        android:entryValues="@array/entries_scoped_storage_home_path_mode_preference_value"
        android:dialogTitle="@string/dialog_title_scoped_storage_home_path_mode_preference"/>

    <SwitchPreference
        android:key="scoped_storage_startup_path_is_home"
        android:defaultValue="@bool/pref_scoped_storage_startup_path_is_home_default"
        android:title="@string/title_scoped_storage_startup_path_mode_preference"
        android:summary="@string/summary_scoped_storage_startup_path_mode_preference"/>

    <!-- <ListPreference -->
    <!--     android:key="local_storage_provider_path_mode" -->
    <!--     android:defaultValue="@string/pref_local_storage_provider_path_mode_default" -->
    <!--     android:title="@string/title_local_storage_provider_path_mode_preference" -->
    <!--     android:summary="@string/summary_local_storage_provider_path_mode_preference" -->
    <!--     android:entries="@array/entries_local_storage_provider_path_mode_preference" -->
    <!--     android:entryValues="@array/entries_local_storage_provider_path_mode_preference_value" -->
    <!--     android:dialogTitle="@string/dialog_title_local_storage_provider_path_mode_preference"/> -->

    <Preference
        android:key="force_64bit"
        android:title="@string/title_change_lib_preference"/>

</PreferenceScreen>
