<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/ignore_xoff"
        android:key="ignore_xoff"
        android:defaultValue="@bool/pref_ignore_xoff_default"
        android:summaryOn="@string/ignore_xoff_summary_on"
        android:summaryOff="@string/ignore_xoff_summary_off"/>

    <CheckBoxPreference
        android:title="@string/alt_uses_8bit_meta"
        android:key="alt_uses_8bit_meta"
        android:defaultValue="@bool/pref_alt_uses_8bit_meta_default"/>

    <CheckBoxPreference
        android:title="@string/alt_sends_esc"
        android:key="alt_sends_esc"
        android:defaultValue="@bool/pref_alt_sends_esc_default"/>

    <CheckBoxPreference
        android:title="@string/back_as_esc"
        android:key="back_as_esc"
        android:defaultValue="@bool/pref_back_as_esc_default"
        android:summary="@string/summary_back_as_esc_preference"/>

</PreferenceScreen>
